--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
+php_flag display_startup_errors on
+php_flag display_errors on
+php_flag html_errors on
+php_value error_reporting 9999
+
 RewriteEngine On
 
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -6,6 +11,3 @@ RewriteCond %{REQUEST_FILENAME} !-l
 
 RewriteRule ^(.+) index.php?url=$1 [QSA,L]
 
-php_flag display_startup_errors on
-php_flag display_errors on
-php_flag html_errors on
